--- a/Spam Model Notebooks/SMS-Collect-DS-TFIDF.ipynb
+++ b/Spam Model Notebooks/SMS-Collect-DS-TFIDF.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1QuR2MJhxOtqdAZz6WJ_9LaK2-zWs3vLS\n",
       "To: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/DataSets/spam.csv\n",
-      "100%|██████████| 504k/504k [00:00<00:00, 3.81MB/s]\n"
+      "100%|██████████| 504k/504k [00:00<00:00, 1.98MB/s]"
      ]
     },
     {
@@ -58,6 +58,13 @@
       " 4   Unnamed: 4  6 non-null      object\n",
       "dtypes: object(5)\n",
       "memory usage: 217.8+ KB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -212,7 +219,7 @@
        "[5572 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +317,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +351,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +813,7 @@
        "RandomForestClassifier(random_state=1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -853,26 +860,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If running in a Jupyter Notebook, use the current working directory or specify your base path\n",
+    "base_dir = os.getcwd()  # Get the current working directory\n",
+    "\n",
+    "# Define the folder to save the pickled model\n",
+    "pickled_data_folder = os.path.join(base_dir, 'pickled_data')\n",
+    "\n",
+    "# Make sure the directory exists, create it if it doesn't\n",
+    "os.makedirs(pickled_data_folder, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['Spam_Model.pkl']"
+       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Saving the model, tfidf, and the eval metrics \n",
-    "# (i.e: accuracy score and classification report)\n",
-    "joblib.dump(model, 'Spam_Model.pkl')\n",
-    "joblib.dump(tfidf, 'tfidf_Vectorizer_Spam.pkl')\n",
-    "joblib.dump((accuracy, class_report), 'Evaluation_Metrics_Spam.pkl')"
+    "# Define the path where the model will be saved\n",
+    "tfidf_save_path = os.path.join(pickled_data_folder, 'tfidf_Vectorizer_Spam.pkl')\n",
+    "\n",
+    "# Print the path to verify\n",
+    "print(f\"Saving model at: {tfidf_save_path}\")\n",
+    "# Save the tfidf to use for streamlit:\n",
+    "joblib.dump(tfidf, tfidf_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the path where the model will be saved\n",
+    "model_save_path = os.path.join(pickled_data_folder, 'Spam_model.pkl')\n",
+    "\n",
+    "# Print the path to verify\n",
+    "print(f\"Saving model at: {model_save_path}\")\n",
+    "\n",
+    "# Save the pipeline to the specified path\n",
+    "joblib.dump(model, model_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the path where the model will be saved\n",
+    "eval_save_path = os.path.join(pickled_data_folder, 'Evaluation_Metrics_Spam.pkl')\n",
+    "\n",
+    "# Print the path to verify\n",
+    "print(f\"Saving model at: {eval_save_path}\")\n",
+    "\n",
+    "# Save the pipeline to the specified path\n",
+    "joblib.dump((accuracy,class_report), eval_save_path)"
    ]
   },
   {
