--- a/Wine Model Notebooks/wine-ntlk-streamlit.ipynb
+++ b/Wine Model Notebooks/wine-ntlk-streamlit.ipynb
@@ -70,6 +70,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Removing stopwords helps improve the model's ability to classify reviews as positive or negative by eliminating common, less meaningful words (e.g., 'the', 'and', 'is') that do not contribute to the sentiment of the review. These words often occur frequently but don't provide valuable information for distinguishing sentiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lemmatizing the words reduces variations of the same word to its base or root form (e.g., 'running' becomes 'run'). This helps standardize the words, making it easier for the model to identify the sentiment without being distracted by different word forms. I chose lemmatization over stemming because lemmatization provides greater accuracy for sentiment analysis models. Unlike stemming, which simply removes word endings, lemmatization considers the context of a word and reduces it to its meaningful base or dictionary form. This makes lemmatization more appropriate for sentiment analysis, as understanding the precise meaning of words in context is crucial for accurately determining sentiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# info"
    ]
   },
@@ -257,194 +271,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tokenize the description ft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Download 'punkt_tab':\n",
-    "# nltk.download(\"punkt_tab\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Tokenize the description:\n",
-    "# df['description'] = df['description'].apply(nltk.word_tokenize)\n",
-    "# df['description']\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Remove stop words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Download stop words:\n",
-    "# nltk.download(\"stopwords\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Checking the length of the stop words:\n",
-    "# len(stopwords.words(\"english\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # a list if the stopwords:\n",
-    "# stop_words = stopwords.words(\"english\")\n",
-    "# stop_words "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Including a , and . in the stop words y appending it to the list:\n",
-    "# stop_words.append(',')\n",
-    "# stop_words.append('.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"wine\" in stop_words) # Checking if wine is in stop words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Function to remove stopwords\n",
-    "# def remove_stopwords(tokens):\n",
-    "#     return [word for word in tokens if word.lower() not in stop_words]\n",
-    "\n",
-    "# # Apply stopwords removal to the description column\n",
-    "# df['description_cleaned'] = df['description'].apply(remove_stopwords)\n",
-    "\n",
-    "# # Display the cleaned description\n",
-    "# df[['description', 'description_cleaned']].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # checking the length of the stop words to see if they included , and . \n",
-    "# len(stop_words) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"wine\" in stop_words)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Removing stopwords helps improve the model's ability to classify reviews as positive or negative by eliminating common, less meaningful words (e.g., 'the', 'and', 'is') that do not contribute to the sentiment of the review. These words often occur frequently but don't provide valuable information for distinguishing sentiment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lemmatize the tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Download the wordnet:\n",
-    "# nltk.download('wordnet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Initialize the Word Net Lemmatizer:\n",
-    "# wnl = WordNetLemmatizer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Function to lemmatize the tokens:\n",
-    "# def lem_token(tokens):\n",
-    "#     return [wnl.lemmatize(word) for word in tokens]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Apply stemming to the cleaned description\n",
-    "# df['Cleaned_Lemma_Description'] = df['description_cleaned'].apply(lem_token)\n",
-    "\n",
-    "# # Display the cleaned and stemmed description\n",
-    "# df[['description', 'Cleaned_Lemma_Description']].head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lemmatizing the words reduces variations of the same word to its base or root form (e.g., 'running' becomes 'run'). This helps standardize the words, making it easier for the model to identify the sentiment without being distracted by different word forms. I chose lemmatization over stemming because lemmatization provides greater accuracy for sentiment analysis models. Unlike stemming, which simply removes word endings, lemmatization considers the context of a word and reduces it to its meaningful base or dictionary form. This makes lemmatization more appropriate for sentiment analysis, as understanding the precise meaning of words in context is crucial for accurately determining sentiment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# pickle for wordcloud in py file"
    ]
   },
@@ -482,9 +308,9 @@
    ],
    "source": [
     "# Save the model with a full path\n",
-    "model_save_path = os.path.join(pickled_data_folder, 'Cleaned_Wine_df.plk')\n",
+    "Cleaned_Wine_save_path = os.path.join(pickled_data_folder, 'Cleaned_Wine_df.plk')\n",
     "# Saving the dataframe:\n",
-    "joblib.dump(df, model_save_path)\n",
+    "joblib.dump(df, Cleaned_Wine_save_path)\n",
     "\n"
    ]
   },
@@ -551,8 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X = df['Cleaned_Lemma_Description'].apply(lambda x: ' '.join(x))  # Join lists back to strings\n",
-    "# y = df['Sentiment'] # Assigning y to Sentiment\n",
+    "\n",
     "\n",
     "# Prepare data for model training\n",
     "X = df['description_cleaned']  # Cleaned descriptions\n",
