--- a/Flight Model Notebooks/Airlinetrain.ipynb
+++ b/Flight Model Notebooks/Airlinetrain.ipynb
@@ -18,6 +18,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1.7.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost\n",
+    "print(xgboost.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Flight Model Notebooks\n"
      ]
     }
