--- a/Flight Model Notebooks/Airlinetrain.ipynb
+++ b/Flight Model Notebooks/Airlinetrain.ipynb
@@ -11,20 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7.6\n"
+      "1.5.0\n"
      ]
     }
    ],
    "source": [
-    "import xgboost\n",
-    "print(xgboost.__version__)\n"
+    "import pandas as pd\n",
+    "print(pd.__version__)\n",
+    "\n"
    ]
   },
   {
