--- a/Wine Model Notebooks/wine-ntlk-streamlit.ipynb
+++ b/Wine Model Notebooks/wine-ntlk-streamlit.ipynb
@@ -98,8 +98,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1qd2rIjiqfx9dZ1q_aufpkwfZsl7u3DQb\n",
-      "To: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/DataSets/winemag-data-130k-v2.csv\n",
-      "100%|██████████| 52.9M/52.9M [00:21<00:00, 2.49MB/s]\n"
+      "To: /Users/yanellyhernandez/Desktop/Streamlit_Projects/DataSets/winemag-data-130k-v2.csv\n",
+      "100%|██████████| 52.9M/52.9M [00:04<00:00, 10.8MB/s]\n"
      ]
     },
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/Cleaned_Wine_df.plk']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/Cleaned_Wine_df.plk']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Name: Sentiment, Length: 129971, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "Name: description_cleaned, Length: 97478, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,23 +586,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/tfidf_Vectorizer_Wine.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/tfidf_Vectorizer_Wine.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/tfidf_Vectorizer_Wine.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/tfidf_Vectorizer_Wine.pkl']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,23 +619,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/Wine_model.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/Wine_model.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/Wine_model.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/Wine_model.pkl']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,23 +653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/Evaluation_Metrics_Wine.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/Evaluation_Metrics_Wine.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Wine Model Notebooks/pickled_data/Evaluation_Metrics_Wine.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Wine Model Notebooks/pickled_data/Evaluation_Metrics_Wine.pkl']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
