--- a/Spam Model Notebooks/SMS-Collect-DS-TFIDF.ipynb
+++ b/Spam Model Notebooks/SMS-Collect-DS-TFIDF.ipynb
@@ -38,8 +38,8 @@
      "text": [
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1QuR2MJhxOtqdAZz6WJ_9LaK2-zWs3vLS\n",
-      "To: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/DataSets/spam.csv\n",
-      "100%|██████████| 504k/504k [00:00<00:00, 1.98MB/s]"
+      "To: /Users/yanellyhernandez/Desktop/Streamlit_Projects/DataSets/spam.csv\n",
+      "100%|██████████| 504k/504k [00:00<00:00, 4.64MB/s]"
      ]
     },
     {
@@ -883,13 +883,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/tfidf_Vectorizer_Spam.pkl']"
       ]
      },
      "execution_count": 11,
@@ -916,13 +916,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/Spam_model.pkl']"
       ]
      },
      "execution_count": 12,
@@ -950,13 +950,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving model at: /Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl\n"
+      "Saving model at: /Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['/Users/yanellyhernandez/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Learning Fuze/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl']"
+       "['/Users/yanellyhernandez/Desktop/Streamlit_Projects/Spam Model Notebooks/pickled_data/Evaluation_Metrics_Spam.pkl']"
       ]
      },
      "execution_count": 13,
