--- a/Flight Model Notebooks/Airlinetrain.ipynb
+++ b/Flight Model Notebooks/Airlinetrain.ipynb
@@ -13,6 +13,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "print(xgb.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import all libraries:\n",
